<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/userEmailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTxt"
        android:layout_marginTop="3dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/fake_email" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailTxt"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/srch_discog" />

    <Button
        android:id="@+id/savedBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBtn"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/svd_discog" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/savedBtn"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/logout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoutBtn"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="17sp"
        android:text="@string/discog_credit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoutBtn"
        android:layout_marginTop="90dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="17sp"
        android:text="@string/lastfm_credit"/>

</RelativeLayout>