<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTxt"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/discog_app" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTxt"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEmail"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/login" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/not_registered" />

    <TextView
        android:id="@+id/moduleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/registerTxt"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/moduleTxt" />

    <TextView
        android:id="@+id/modcodeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/moduleTxt"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/modcodeTxt" />

    <TextView
        android:id="@+id/devTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/modcodeTxt"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/dev_text" />

    <TextView
        android:id="@+id/sIDTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_below="@id/devTxt"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/s14103017" />

</RelativeLayout>