<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/create_account" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerTxt"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerEmail"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/registerPasswordCfm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPassword"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPasswordCfm"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/register" />

</RelativeLayout>