<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/topWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/albumImg"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/album_img"
            android:src="@mipmap/noimg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/albumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="40dp"
                android:text="@string/album_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/albumArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/albumName"
                android:layout_marginTop="2dp"
                android:text="@string/album_artist"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/albumGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topWrapper"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tracklistTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/albumGenre"
        android:layout_marginTop="15dp"
        android:maxLines="7"
        android:scrollbars="vertical"
        android:text="@string/tracklist"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tracklistTitle"
        android:layout_marginTop="3dp"
        android:clickable="true"
        android:divider="@android:color/white"
        android:dividerHeight="1dp"
        android:focusable="true"
        android:padding="2dp">

    </ListView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/albumFABMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:menu_animationDelayPerItem="50"
        app:menu_backgroundColor="#80000000"
        app:menu_buttonSpacing="0dp"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorPrimary"
        app:menu_colorRipple="@color/colorPrimary"
        app:menu_fab_size="normal"
        app:menu_icon="@mipmap/plus"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_margin="0dp"
        app:menu_labels_padding="8dp"
        app:menu_labels_position="left"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/albumSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/star"
            app:fab_colorNormal="#ffcc33"
            app:fab_label="Save album"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/youtubeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/youtube"
            app:fab_colorNormal="#ff0000"
            app:fab_label="See videos"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/albumTweetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/twitter"
            app:fab_colorNormal="#00aced"
            app:fab_label="Tweet this"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/albumFbBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/facebook"
            app:fab_colorNormal="#3b5998"
            app:fab_label="Post this"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/albumHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home"
            app:fab_colorNormal="#FFFFFF"
            app:fab_label="Back to home"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>